@@ -215,6 +215,22 @@ name|hbase
 operator|.
 name|ipc
 operator|.
+name|HBaseRPC
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|ipc
+operator|.
 name|TransactionalRegionInterface
 import|;
 end_import
@@ -246,6 +262,28 @@ name|TransactionalTable
 extends|extends
 name|HTable
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|byte
+name|RPC_CODE
+init|=
+literal|100
+decl_stmt|;
+static|static
+block|{
+name|HBaseRPC
+operator|.
+name|addToMap
+argument_list|(
+name|TransactionalRegionInterface
+operator|.
+name|class
+argument_list|,
+name|RPC_CODE
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * @param conf    * @param tableName    * @throws IOException    */
 specifier|public
 name|TransactionalTable
