@@ -375,6 +375,220 @@ argument_list|()
 expr_stmt|;
 block|}
 comment|// no public ctor
+comment|// Special code that means 'not-encoded'.
+specifier|private
+specifier|static
+specifier|final
+name|byte
+name|NOT_ENCODED
+init|=
+literal|0
+decl_stmt|;
+specifier|private
+specifier|static
+name|byte
+name|code
+init|=
+name|NOT_ENCODED
+operator|+
+literal|1
+decl_stmt|;
+comment|/** Add a new interface to the ipc map.    * @param c Class whose methods we'll add to the map of methods to codes    * (and vice versa).    * @param startCode Current state of the byte code.    * @return State of<code>code</code> when this method is done.    */
+specifier|public
+specifier|static
+name|byte
+name|addToMap
+parameter_list|(
+specifier|final
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|c
+parameter_list|,
+specifier|final
+name|byte
+name|startCode
+parameter_list|)
+block|{
+if|if
+condition|(
+name|Invocation
+operator|.
+name|CODE_TO_METHODNAME
+operator|.
+name|get
+argument_list|(
+name|startCode
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Code "
+operator|+
+name|startCode
+operator|+
+literal|"already had entry"
+argument_list|)
+throw|;
+block|}
+name|byte
+name|localCode
+init|=
+name|startCode
+decl_stmt|;
+name|Method
+index|[]
+name|methods
+init|=
+name|c
+operator|.
+name|getMethods
+argument_list|()
+decl_stmt|;
+comment|// There are no guarantees about the order in which items are returned in
+comment|// so do a sort (Was seeing that sort was one way on one server and then
+comment|// another on different server).
+name|Arrays
+operator|.
+name|sort
+argument_list|(
+name|methods
+argument_list|,
+operator|new
+name|Comparator
+argument_list|<
+name|Method
+argument_list|>
+argument_list|()
+block|{
+specifier|public
+name|int
+name|compare
+parameter_list|(
+name|Method
+name|left
+parameter_list|,
+name|Method
+name|right
+parameter_list|)
+block|{
+return|return
+name|left
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|compareTo
+argument_list|(
+name|right
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|methods
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Invocation
+operator|.
+name|addToMap
+argument_list|(
+name|methods
+index|[
+name|i
+index|]
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|localCode
+operator|++
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|localCode
+return|;
+block|}
+static|static
+block|{
+name|code
+operator|=
+name|HBaseRPC
+operator|.
+name|addToMap
+argument_list|(
+name|VersionedProtocol
+operator|.
+name|class
+argument_list|,
+name|code
+argument_list|)
+expr_stmt|;
+name|code
+operator|=
+name|HBaseRPC
+operator|.
+name|addToMap
+argument_list|(
+name|HMasterInterface
+operator|.
+name|class
+argument_list|,
+name|code
+argument_list|)
+expr_stmt|;
+name|code
+operator|=
+name|HBaseRPC
+operator|.
+name|addToMap
+argument_list|(
+name|HMasterRegionInterface
+operator|.
+name|class
+argument_list|,
+name|code
+argument_list|)
+expr_stmt|;
+name|code
+operator|=
+name|HBaseRPC
+operator|.
+name|addToMap
+argument_list|(
+name|HRegionInterface
+operator|.
+name|class
+argument_list|,
+name|code
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** A method invocation, including the method name and its parameters.*/
 specifier|private
 specifier|static
@@ -387,7 +601,6 @@ name|Configurable
 block|{
 comment|// Here, for hbase, we maintain two static maps of method names to code and
 comment|// vice versa.
-specifier|private
 specifier|static
 specifier|final
 name|Map
@@ -427,69 +640,6 @@ name|Byte
 argument_list|>
 argument_list|()
 decl_stmt|;
-comment|// Special code that means 'not-encoded'.
-specifier|private
-specifier|static
-specifier|final
-name|byte
-name|NOT_ENCODED
-init|=
-literal|0
-decl_stmt|;
-static|static
-block|{
-name|byte
-name|code
-init|=
-name|NOT_ENCODED
-operator|+
-literal|1
-decl_stmt|;
-name|code
-operator|=
-name|addToMap
-argument_list|(
-name|VersionedProtocol
-operator|.
-name|class
-argument_list|,
-name|code
-argument_list|)
-expr_stmt|;
-name|code
-operator|=
-name|addToMap
-argument_list|(
-name|HMasterInterface
-operator|.
-name|class
-argument_list|,
-name|code
-argument_list|)
-expr_stmt|;
-name|code
-operator|=
-name|addToMap
-argument_list|(
-name|HMasterRegionInterface
-operator|.
-name|class
-argument_list|,
-name|code
-argument_list|)
-expr_stmt|;
-name|code
-operator|=
-name|addToMap
-argument_list|(
-name|HRegionInterface
-operator|.
-name|class
-argument_list|,
-name|code
-argument_list|)
-expr_stmt|;
-block|}
 comment|// End of hbase modifications.
 specifier|private
 name|String
@@ -882,7 +1032,6 @@ name|conf
 return|;
 block|}
 comment|// Hbase additions.
-specifier|private
 specifier|static
 name|void
 name|addToMap
@@ -936,119 +1085,6 @@ argument_list|,
 name|name
 argument_list|)
 expr_stmt|;
-block|}
-comment|/*      * @param c Class whose methods we'll add to the map of methods to codes      * (and vice versa).      * @param code Current state of the byte code.      * @return State of<code>code</code> when this method is done.      */
-specifier|private
-specifier|static
-name|byte
-name|addToMap
-parameter_list|(
-specifier|final
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|c
-parameter_list|,
-specifier|final
-name|byte
-name|code
-parameter_list|)
-block|{
-name|byte
-name|localCode
-init|=
-name|code
-decl_stmt|;
-name|Method
-index|[]
-name|methods
-init|=
-name|c
-operator|.
-name|getMethods
-argument_list|()
-decl_stmt|;
-comment|// There are no guarantees about the order in which items are returned in
-comment|// so do a sort (Was seeing that sort was one way on one server and then
-comment|// another on different server).
-name|Arrays
-operator|.
-name|sort
-argument_list|(
-name|methods
-argument_list|,
-operator|new
-name|Comparator
-argument_list|<
-name|Method
-argument_list|>
-argument_list|()
-block|{
-specifier|public
-name|int
-name|compare
-parameter_list|(
-name|Method
-name|left
-parameter_list|,
-name|Method
-name|right
-parameter_list|)
-block|{
-return|return
-name|left
-operator|.
-name|getName
-argument_list|()
-operator|.
-name|compareTo
-argument_list|(
-name|right
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-return|;
-block|}
-block|}
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|methods
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|addToMap
-argument_list|(
-name|methods
-index|[
-name|i
-index|]
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|localCode
-operator|++
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|localCode
-return|;
 block|}
 comment|/*      * Write out the code byte for passed Class.      * @param out      * @param c      * @throws IOException      */
 specifier|static
